# cndrvcups-lb

./: .gitignore  LEAME-ufr2-2.9xSP.txt  LEGGIMI-ufr2-2.9xIT.txt  LICENSE-lipslx-2.90.txt  LICENSE-ufr2-2.90DE.txt  LICENSE-ufr2-2.90E.txt  LICENSE-ufr2-2.90FR.txt  LICENSE-ufr2-2.90IT.txt  LICENSE-ufr2-2.90SP.txt  LIESMICH-ufr2-2.9xDE.txt  LISEZMOI-ufr2-2.9xFR.txt  Makefile.am  README  README-lipslx-2.9x.txt  README-ufr2-2.9xUK.txt  README-ufr2-2.9xUS.txt  README.md  allgen.sh  cndrvcups-lb.spec  configure.ac  log4crc
cngplp/: ChangeLog  Makefile.am  NEWS  cngplpmodIF.c  configure.ac  gladestr.h  keystr.h  keytext.sh
cngplp/cngplpmod/: cngplpdef.h  cngplpmod.c  cngplpmod.h  execjob.c  getdata.c  ppdkeys.h  ppdoptions.c  ppdoptions.h  ppdtables.h  setdata.c
cngplp/controls/button/: Makefile.am
cngplp/controls/checkbutton/: Makefile.am
cngplp/controls/combo/: Makefile.am
cngplp/controls/dialog/: Makefile.am
cngplp/controls/entry/: Makefile.am
cngplp/controls/label/: Makefile.am
cngplp/controls/radiobutton/: Makefile.am
cngplp/controls/spinbutton/: Makefile.am
cngplp/controls/textview/: Makefile.am
cngplp/files/: CNC221ZJ.res  CNC222ZK.res  CNC350ZJ.res  CNC350ZK.res  CNC600ZS.res  CNC727ZJ.res  CNC727ZK.res  CNC728ZK.res  CNC928ZJ.res  CNI220ZS.res  CNI423ZJ.res  CNI425ZK.res  CNI500ZK.res  CNI626ZK.res  CNL671ZJ.res  CNL678ZK.res  CNL7600CZJ.res  CNL7680CZK.res  CNL7780CZK.res  CNL8720ZJ.res  CNL8780ZK.res  CNL9510CZJ.res  CNL9520CZJ.res  CNM680ZJ.res  CNM820CZJ.res  CNM820CZS.res  CNM850CZJ.res  CNM850CZS.res  ChangeLog  Makefile.am  NEWS  cngplp_ufr2.glade  common_ufr2.res  configure.ac  func_config_ufr2.xml  main.c
cngplp/po/: Makefile.am  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  it.gmo  it.po  ja.gmo  ja.po  libuictlufr2.1.0.pot
cpca/: Makefile.am  configure.ac
cpca/cnpklib/: cnpklib.c  cnpklibufr2.h  cnpkopt.c  cnpkopt.h  cnpkproc.c  cnpkproc.h
debian/: changelog  control  copyright  rules
ppd/: CNCUPSD1100ZK.ppd  CNCUPSD1100ZS.ppd  CNCUPSD1300ZK.ppd  CNCUPSD1300ZS.ppd  CNCUPSD450ZJ.ppd  CNCUPSD450ZK.ppd  CNCUPSD450ZS.ppd  CNCUPSD490ZK.ppd  CNCUPSD490ZS.ppd  CNCUPSD500ZK.ppd  CNCUPSD500ZS.ppd  CNCUPSD560ZK.ppd  CNCUPSD560ZS.ppd  CNCUPSIPRC1PZJ.ppd  CNCUPSIPRC1PZK.ppd  CNCUPSIPRC1ZJ.ppd  CNCUPSIPRC1ZK.ppd  CNCUPSIR1023ZK.ppd  CNCUPSIR1023ZS.ppd  CNCUPSIR1025ZK.ppd  CNCUPSIR1025ZS.ppd  CNCUPSIR105IZJ.ppd  CNCUPSIR105PZK.ppd  CNCUPSIR1133ZK.ppd  CNCUPSIR1750ZK.ppd  CNCUPSIR1750ZS.ppd  CNCUPSIR2016ZK.ppd  CNCUPSIR2016ZS.ppd  CNCUPSIR2018ZK.ppd  CNCUPSIR2018ZS.ppd  CNCUPSIR2020ZK.ppd  CNCUPSIR2020ZS.ppd  CNCUPSIR2030ZK.ppd  CNCUPSIR2030ZS.ppd  CNCUPSIR2202ZK.ppd  CNCUPSIR2202ZS.ppd  CNCUPSIR2230ZJ.ppd  CNCUPSIR2230ZK.ppd  CNCUPSIR2320ZK.ppd  CNCUPSIR2320ZS.ppd  (+261 more)
pstoufr2cpca/: Makefile.am  configure.ac
pstoufr2cpca/filter/: Makefile.am  paramlist.c  paramlist.h  pstoufr2cpca  pstoufr2cpca.c  pstoufr2cpca.h  pstoufr2cpca_func.c  pstoufr2cpca_func.h
tests/: Makefile.am
tests/pstoufr2cpca/: Makefile.am
tests/pstoufr2cpca/filter/: Makefile.am  pstoufr2cpca_func_test  pstoufr2cpca_func_test.c
tests/pstoufr2cpca/filter/.deps/: pstoufr2cpca_func_test.Po  pstoufr2cpca_test.Po
