confdir = /usr/share/cngplp

conf_DATA = \
	cngplp_ufr2.glade\
	func_config_ufr2.xml\
	common_ufr2.res\
	CNI1025ZK.res\
	CNI1025ZS.res\
	CNI232ZK.res\
	CNI232ZS.res\
	CNI242ZK.res\
	CNM4390ZJ.res\
	CNM4390ZK.res\
	CNM4390ZS.res\
	CNM4350ZJ.res\
	CNM4350ZK.res\
	CNM4350ZS.res\
	CND490ZK.res\
	CND490ZS.res\
	CND450ZJ.res\
	CND450ZK.res\
	CND450ZS.res\
	CND110ZK.res\
	CND110ZS.res\
	CNL9600CZJ.res\
	CNPC1PZJ.res\
	CNPC1PZK.res\
	CNC211ZJ.res\
	CNM840ZJ.res\
	CNM930ZK.res\
	CNC102ZK.res\
	CNM840ZK.res\
	CNM930ZS.res\
	CNC102ZS.res\
	CNM840ZS.res\
	CNC907ZJ.res\
	CNC906ZJ.res\
	CNC907ZK.res\
	CNC906ZK.res\
	CNC706ZJ.res\
	CNC706ZK.res\
	CNC505ZJ.res\
	CNC505ZK.res\
	CNC503ZJ.res\
	CNC503ZK.res\
	CNL7700CZJ.res\
	CNL7750CZK.res\
	CNM800ZJ.res\
	CNM800ZS.res\
	CNM800ZK.res\
	CNM830ZJ.res\
	CNM830ZS.res\
	CNM830ZK.res\
	CNI810ZJ.res\
	CNI810ZK.res\
	CNI809ZJ.res\
	CNI809ZK.res\
	CNI607ZJ.res\
	CNI607ZK.res\
	CNI606ZJ.res\
	CNI606ZK.res\
	CNL665ZK.res\
	CNL665ZS.res\
	CNM580ZK.res\
	CNM580ZS.res\
	CNI2530ZK.res\
	CNI2530ZS.res\
	CNI2545ZK.res\
	CNI2545ZS.res\
	CNI2520ZK.res\
	CNI2520ZS.res\
	CNL8630ZJ.res\
	CNM4500ZJ.res\
	CNM4500ZK.res\
	CNM4500ZS.res\
	CNM4400ZJ.res\
	CNM4400ZK.res\
	CNM4400ZS.res\
	CND500ZK.res\
	CND500ZS.res\
	CNL670ZJ.res\
	CNL675ZK.res\
	CNM920ZJ.res\
	CNM920ZK.res\
	CNM920ZS.res\
	CNM103ZK.res\
	CNM103ZS.res\
	CNC203ZJ.res\
	CNC203ZK.res\
	CNC203IZK.res\
	CNC203LZK.res\
	CNC202ZK.res\
	CNL370ZJ.res\
	CNL380ZJ.res\
	CNL395ZJ.res\
	CNL3970ZJ.res\
	CNL336ZK.res\
	CNL337ZK.res\
	CNL341ZJ.res\
	CNL346ZK.res\
	CNL5910ZJ.res\
	CNL5910MZJ.res\
	CNL590ZJ.res\
	CNL540ZJ.res\
	CNL536ZK.res\
	CNL5960ZK.res\
	CNL230ZJ.res\
	CNL230ZK.res\
	CNL230ZS.res\
	CNC3000ZK.res\
	CNC3000ZS.res\
	CNM4010ZJ.res\
	CNM4010ZK.res\
	CNM4100ZJ.res\
	CNM4100ZK.res\
	CNM4100ZS.res\
	CNM4200ZJ.res\
	CNM4200ZK.res\
	CNM4200ZS.res\
	CNM4600ZJ.res\
	CNM4600ZK.res\
	CNM4600ZS.res\
	CN7400ZJ.res\
	CN7400ZS.res\
	CNI203ZK.res\
	CNI203ZS.res\
	CNI2018ZK.res\
	CNI2018ZS.res\
	CNI1023ZK.res\
	CNI1023ZS.res\
	CNI2016ZK.res\
	CNI2016ZS.res\
	CNI202ZK.res\
	CNI202ZS.res\
	CNM650ZJ.res\
	CNM650ZK.res\
	CNM650ZS.res\
	CN7100ZK.res\
	CN7200ZJ.res\
	CN7200ZS.res\
	CNPC1ZJ.res\
	CNPC1ZK.res\
	CNC258ZK.res\
	CNC318ZK.res\
	CN318CZK.res\
	CNC688ZJ.res\
	CNC688ZK.res\
	CN688CZK.res\
	CNC687ZJ.res\
	CNC687ZK.res\
	CNC587ZJ.res\
	CNC587ZK.res\
	CNC338ZJ.res\
	CNC338ZK.res\
	CNC51AZJ.res\
	CNC51AZK.res\
	CNC518ZJ.res\
	CNC518ZK.res\
	CNC458ZJ.res\
	CNC458ZK.res\
	CN105IZJ.res\
	CN105PZK.res\
	CNI223ZJ.res\
	CNI223ZK.res\
	CNI283ZK.res\
	CNI227ZJ.res\
	CNI227ZK.res\
	CN3025ZJ.res\
	CN3025ZK.res\
	CN3030ZK.res\
	CN3045ZJ.res\
	CN3045ZK.res\
	CNI353ZK.res\
	CNI453ZK.res\
	CNI357ZJ.res\
	CNI357ZK.res\
	CN5075ZJ.res\
	CN5075ZK.res\
	CN5055ZJ.res\
	CN5055ZK.res\
	CNI657ZJ.res\
	CNI657ZK.res\
	CN7086ZJ.res\
	CN7086ZK.res\
	CNI727ZJ.res\
	CNI807ZK.res\
	CNI857ZJ.res\
	CNI85PZK.res\
	CNI907ZK.res\
	CN3225ZJ.res\
	CN3245ZJ.res\
	CN3225ZK.res\
	CN3245ZK.res\
	CN3230ZK.res\
	CNL4500ZJ.res\
	CNC408ZJ.res\
	CNL3930ZJ.res\
	CNL3980ZJ.res\
	CNL398MZJ.res\
	CNC358ZJ.res\
	CNC358ZK.res\
	CNC255ZJ.res\
	CNC255ZK.res\
	CNL5975ZK.res\
	CN1000ZJ.res\
	CNI242ZS.res\
	CNI2422ZK.res\
	CNI2422ZS.res\
	CND130ZK.res\
	CND130ZS.res\
	CNI1133ZK.res\
	CNM3010ZK.res\
	CNM3010ZS.res\
	CNM4400WZK.res\
	CNM4500WZK.res\
	CNM4500WZS.res\
	CNM590ZK.res\
	CNM590ZS.res\
	CNM670ZJ.res\
	CNI1750ZK.res\
	CNI1750ZS.res\
	CNI403ZJ.res\
	CNI403ZK.res\
	CNI404ZJ.res\
	CNI405ZK.res\
	CNL6600ZJ.res\
	CNL667ZK.res\
	CNL668ZK.res\
	CNL7600CZJ.res\
	CNL7660CZK.res\
	CNL7680CZK.res\
	CNM800CZJ.res\
	CNM800CZK.res\
	CNM800CZS.res\
	CNM830CZJ.res\
	CNM830CZK.res\
	CNM830CZS.res\
	CNL250ZJ.res\
	CNL170ZK.res\
	CNL170ZS.res\
	CNL9510CZJ.res\
	CNL9650CZJ.res\
	CNL667ZS.res\
	CNL7660CZS.res\
	CNM4700ZS.res\
	CNM4800ZS.res\
	CND560ZS.res\
	CNL410ZS.res\
	CNC600ZS.res\
	CNC223ZK.res\
	CNC222ZK.res\
	CNC524ZK.res\
	CNC525ZK.res\
	CNC727ZK.res\
	CNC728ZK.res\
	CNC928ZK.res\
	CNM4700ZK.res\
	CNM4800ZK.res\
	CND560ZK.res\
	CNL410ZK.res\
	CNL7780CZK.res\
	CNC223ZJ.res\
	CNC524ZJ.res\
	CNC525ZJ.res\
	CNC727ZJ.res\
	CNC928ZJ.res\
	CNM4700ZJ.res\
	CNM4800ZJ.res\
	CNL410ZJ.res\
	CNM850CZS.res\
	CNM850CZK.res\
	CNM850CZJ.res\
	CNM820CZS.res\
	CNM820CZK.res\
	CNM820CZJ.res\
	CNL678ZK.res\
	CNL671ZJ.res\
	CNI829ZK.res\
	CNI829ZJ.res\
	CNI820ZK.res\
	CNI820ZJ.res\
	CNI627ZK.res\
	CNI627ZJ.res\
	CNI626ZK.res\
	CNI626ZJ.res\
	CNI500ZK.res\
	CNC221ZJ.res\
	CNI423ZJ.res\
	CNI423ZK.res\
	CNI424ZJ.res\
	CNI425ZK.res\
	CNM610ZK.res\
	CNM610ZS.res\
	CNM680ZJ.res\
	CNL9520CZJ.res\
	CNL9660CZJ.res\
	CNL8720ZJ.res\
	CNL8730ZJ.res\
	CNC350ZJ.res\
	CNL8780ZK.res\
	CNL8750ZK.res\
	CNI220ZK.res\
	CNC350ZK.res\
	CNC351ZK.res\
	CNI220ZS.res

